Fix broken overlay/save panel margins
After removing the margin on the parent element, the panel
and overlay do not need the negative 20px margins anymore,
which previously were required in order to have it cover the
whole viewport width. Since removing the margin on the parent
these properties led to those elements being too wide.

--- a/rtg/src/components/bets/BetsStatusPanel.scss
+++ b/rtg/src/components/bets/BetsStatusPanel.scss
@@ -5,8 +5,8 @@ $height: 60px;
 
 .BetsStatusPanel {
   position: fixed;
-  left: -20px;
-  right: -20px;
+  left: 0;
+  right: 0;
   bottom: 0;
   height: $height;
 
@@ -42,8 +42,8 @@ $height: 60px;
   &__saving-overlay {
     position: absolute;
     top: 0;
-    left: -20px;
-    right: -20px;
+    left: 0;
+    right: 0;
     bottom: -100px; // also cover the flags which exceed the bottom border of the parent div a bit
     opacity: 0.5;
     background-color: white;
